cleaned up the logout and the nav bar links

--- a/src/Application.less
+++ b/src/Application.less
@@ -1,10 +1,88 @@
+body,
+html {
+
+    height: 80%;
+    background-image: url('../public/images/pexels-cottonbro-7580260.jpg');
+    /* Control the height of the image */
+    min-height: 80vw;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.sm-image {
+    max-width: 60%;
+    max-height: 60%;
+    display: block;
+}
+
+.small-text {
+    font-size: 12px;   
+}
+
+.tag-line {
+    text-align: center;
+}
+
+/* Add styles to the form container */
+.form-container {
+    position: absolute;
+    right: 0;
+    margin: 20px;
+    padding-top: 10px;
+    max-width: 400px;
+    padding: 16px;
+    background-color: white;
+    top: 33%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* Full-width input fields */
+input[type='text'],
+input[type='password'] {
+    width: 100%;
+    padding: 10px;
+    margin: 5 0 0 0;  /* t r b l*/
+    border: none;
+    background: #f1f1f1;
+}
+
+input[type='text']:focus,
+input[type='password']:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Set a style for the submit button */
+.btn {
+    background-color: #160561;
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+}
+
+.btn:hover {
+    opacity: 1;
+}
+
 label {
   display: block;
   margin-top: 10px;
 }
 .card-container.card {
-  max-width: 350px !important;
-  padding: 40px 40px;
+  max-width: 400px !important;
+  padding: 20px 20px;
+  margin: 20px 20px;
 }
 .card {
   background-color: #f7f7f7;
